Publish MQTT messages when Windows Volume changes

--- a/AspNetCore.WSMQTT.csproj
+++ b/AspNetCore.WSMQTT.csproj
@@ -16,5 +16,6 @@
     <PackageReference Include="MQTTnet" Version="3.0.8" />
     <PackageReference Include="MQTTnet.AspNetCore" Version="3.0.8" />
     <PackageReference Include="MQTTnet.Extensions.ManagedClient" Version="3.0.8" />
+    <PackageReference Include="System.Reactive" Version="4.1.6" />
   </ItemGroup>
 </Project>
